# ai-nanodegree-venv

./: README.md  create_venv.sh  initialize_poetry.sh  pyproject.toml
