[tool.poetry]
name = "ai-nanodegree-venv"
version = "0.1.0"
description = ""
authors = ["Ramy Rashad <ra.rashad@gmail.com>"]
readme = "README.md"
#packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
pre-commit = "*"
udacity-pa = "*"
notebook = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"